<ui version="4.0" >
 <class>ConfigureMIDIInput</class>
 <widget class="QDialog" name="ConfigureMIDIInput" >
  <property name="geometry" >
   <rect>
    <x>0</x>
    <y>0</y>
    <width>451</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle" >
   <string>Configure MIDI Input Plugin</string>
  </property>
  <layout class="QGridLayout" name="gridLayout" >
   <item row="0" column="0" colspan="4" >
    <widget class="QTreeWidget" name="m_tree" >
     <property name="alternatingRowColors" >
      <bool>true</bool>
     </property>
     <property name="rootIsDecorated" >
      <bool>false</bool>
     </property>
     <property name="itemsExpandable" >
      <bool>false</bool>
     </property>
     <property name="allColumnsShowFocus" >
      <bool>true</bool>
     </property>
     <column>
      <property name="text" >
       <string>1</string>
      </property>
     </column>
    </widget>
   </item>
   <item row="1" column="0" >
    <widget class="QPushButton" name="m_refreshButton" >
     <property name="text" >
      <string>Refresh</string>
     </property>
    </widget>
   </item>
   <item row="1" column="1" >
    <widget class="QPushButton" name="m_editButton" >
     <property name="toolTip" >
      <string>Edit the selected input line</string>
     </property>
     <property name="text" >
      <string>Edit...</string>
     </property>
    </widget>
   </item>
   <item row="1" column="2" >
    <spacer>
     <property name="orientation" >
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="sizeHint" stdset="0" >
      <size>
       <width>121</width>
       <height>20</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="1" column="3" >
    <widget class="QDialogButtonBox" name="buttonBox" >
     <property name="standardButtons" >
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>ConfigureMIDIInput</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel" >
     <x>304</x>
     <y>277</y>
    </hint>
    <hint type="destinationlabel" >
     <x>210</x>
     <y>271</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>ConfigureMIDIInput</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel" >
     <x>341</x>
     <y>283</y>
    </hint>
    <hint type="destinationlabel" >
     <x>241</x>
     <y>282</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
